Update on product details alignment issue

--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -19,7 +19,6 @@ img{
   margin: 1rem;
   width: 400px;
   height: 200px;
-  margin-right: 881px;
 }
 
 .details{
@@ -95,6 +94,7 @@ img{
   padding: 1rem;
   border-radius: 10rem;
   outline: none;
+  margin-top: 10px;
 }
 
 .details button:hover{
